--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,12 @@ p {
 
 /* landing styles */
 .bg-img {
-    background: url(landing-img.jpeg) no-repeat center bottom fixed;
+    background: url(landing-img-1280.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 70vh;
+    height: 90vh;
    
 }
 
@@ -93,7 +93,7 @@ p {
     margin-top: -100px;
     margin-left: -30px;
     width: 100vw;
-    height: 70vh;
+    height: 90vh;
     padding-top: 250px;
     padding-left: 150px;
     background-color: rgba(31, 30, 30, 0.342);
@@ -101,7 +101,9 @@ p {
 }
 
 .container>p {
-    max-width: 450px;
+    max-width: 550px;
+    font-size: 30px;
+    font-weight: 300;
 }
 
 .view-btn {
