--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ p {
 
 .content {
     margin-top: -100px;
-    margin-left: -30px;
+    margin-left: -15px;
+ 
     width: 100vw;
     height: 90vh;
     padding-top: 250px;
@@ -114,6 +115,15 @@ p {
 .view-btn:hover {
     background-color: #712E1E;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 768px){
+    .container>p {
+        font-size: 20px;
+    }
+    .content{
+        padding-left: 50px;
+    }
 }
 
 
