--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,12 @@
-
 /* General Sytles */
 
-.section-2,
-.section-3,
-.section-4,
-.footer {
+.section-2, .section-3, .section-4, .footer {
     padding-top: 85px;
     padding-bottom: 70px;
 }
 
-.section-2,
-.section-4 {
+.section-2, .section-4 {
     background-color: #F7F2EF;
-
 }
 
 .title {
@@ -33,11 +27,9 @@ p {
     font-size: 15px;
 }
 
-.btn,
-.underline {
+.btn, .underline {
     background-color: #712E1E;
     color: #FFFFFF;
-
 }
 
 .btn:hover {
@@ -53,16 +45,16 @@ p {
 
 /* Navbar Styles */
 
-.navbar-collapse{
+.navbar-collapse {
     justify-content: flex-end;
 }
+
 .navbar {
     margin: auto;
 }
 
 .form-control {
     background-color: #712E1E;
-
 }
 
 .form-control::placeholder {
@@ -76,11 +68,13 @@ p {
 .nav-link {
     color: #712E1E;
 }
-.search{
+
+.search {
     margin-left: -40px;
 }
 
 /* landing styles */
+
 .bg-img {
     background: url(landing-img-1280.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -88,7 +82,6 @@ p {
     -o-background-size: cover;
     background-size: cover;
     height: 90vh;
-   
 }
 
 .landing-img {
@@ -99,7 +92,6 @@ p {
 .content {
     margin-top: -100px;
     margin-left: -15px;
- 
     width: 100vw;
     height: 90vh;
     padding-top: 250px;
@@ -124,18 +116,10 @@ p {
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px){
-    .container>p {
-        font-size: 20px;
-    }
-    .content{
-        padding-left: 50px;
-    }
-}
-
 
 
 /* Work With Us sytles */
+
 .image {
     width: 200px;
     height: 180px;
@@ -143,6 +127,7 @@ p {
 }
 
 /* Our locations Styles */
+
 .card {
     border: none;
     margin-right: 70px;
@@ -154,7 +139,6 @@ p {
 
 .location-card {
     background-color: unset;
-
 }
 
 .loctaion-card p {
@@ -187,7 +171,6 @@ input {
     opacity: 0.5;
 }
 
-
 .social-icons {
     display: flex;
     flex-direction: row;
@@ -195,4 +178,26 @@ input {
 
 .social-icon {
     margin: 10px;
+}
+.footer2{
+    justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+    .container>p {
+        font-size: 20px;
+    }
+    .content {
+        padding-left: 50px;
+    }
+    .footer2{
+        justify-content: center;
+    }
+
+}
+
+@media screen and (max-width: 576px) {
+    .footer {
+        text-align: center;
+    }
+   
 }
